welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:9: error: not found: value c
			if (c==0) {
                            ^