welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.code
def fizzBuzz(a:Int):String = {
	var b=a%3;var f=a%5;
	if (b!=0 && f!=0) {
		return ""+a
	}else {
		if (b!=0) {
			return "Fizz"
		}else {
			if (c==0) {
				return "Fizz Buzz"
			}else {
				return "Buzz"
			}
		}
	}
}
